--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "deploy": "npm run build; git checkout gh-pages; git merge master; npm run build; git add -f dist; git commit . -m; git subtree push --prefix dist origin gh-pages"
+    "deploy": "git merge master; npm run build; git add -f dist; git commit -m .; git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.9",
     "less-loader": "^4.1.0",
     "marked": "^0.5.1",
+    "vconsole": "^3.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
